--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-structures",
+  "name": "dsjs",
   "version": "1.0.0",
   "description": "",
   "main": "./lib/index.js",
@@ -8,6 +8,7 @@
   ],
   "types": "./lib/index.d.ts",
   "scripts": {
+    "eslint": "eslint",
     "test": "node --inspect-brk ./node_modules/jest/bin/jest",
     "test:build": "tsc --project ./tsconfig.test.json",
     "build": "tsc"
@@ -17,6 +18,9 @@
   "devDependencies": {
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.11",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint": "^7.2.0",
     "jest": "^26.0.1",
     "typescript": "^3.9.5"
   },
