trie node added with initial tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "request": "launch",
             "args": [
                 "--runInBand",
-                // "--",
-                // "tree"
+                "--",
+                "tree"
             ],
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
