--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "type": "pwa-node",
             "name": "vscode-jest-tests",
             "request": "launch",
             "args": [
                 "--runInBand",
                 "--",
-                "tree"
+                "tree",
+                "&&",
+                "exit"
             ],
             "cwd": "${workspaceFolder}",
+            "sourceMaps": true,
+            "resolveSourceMapLocations": [
+                "${workspaceFolder}/**",
+                "!**/node_modules/**"
+            ],
             "console": "integratedTerminal",
-            "internalConsoleOptions": "neverOpen",
-            "disableOptimisticBPs": false,
+            "internalConsoleOptions": "openOnFirstSessionStart",
             "program": "${workspaceFolder}/node_modules/jest/bin/jest",
             "outFiles": ["${workspaceFolder}/test_build/*.spec.js"]
         }
