--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,11 @@
             "name": "vscode-jest-tests",
             "request": "launch",
             "args": [
-                "--runInBand",
-                "--",
-                "tree",
-                "&&",
-                "exit"
+                /**********************************
+                /** Optional: test single file  **/
+                //  "graph",
+                /*********************************/
+                "--runInBand"
             ],
             "cwd": "${workspaceFolder}",
             "sourceMaps": true,
@@ -24,7 +24,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "openOnFirstSessionStart",
             "program": "${workspaceFolder}/node_modules/jest/bin/jest",
-            "outFiles": ["${workspaceFolder}/test_build/*.spec.js"]
+            "outFiles": ["${workspaceFolder}/test_build/**/*.spec.js"]
         }
     ]
 }
