queue refactor complete

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "pwa-node",
+            "type": "node",
             "name": "vscode-jest-tests",
             "request": "launch",
             "args": [
                 /**********************************
                 /** Optional: test single file  **/
-                 "graph",
+                 "queue",
                 /*********************************/
                 "--runInBand"
             ],
