add child values to graph

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "args": [
                 /**********************************
                 /** Optional: test single file  **/
-                 "queue",
+                 "graphs",
                 /*********************************/
                 "--runInBand"
             ],
