--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "env": {
-        "browser": true,
-        "es2020": true
+        "es2020": true,
+        "node": true
     },
     "extends": [
         "eslint:recommended",
@@ -20,5 +20,5 @@
         "semi":"error",
         "no-multiple-empty-lines":"error"
     },
-    "ignorePatterns": ["lib","*_build", "jest.config.js"]
+    "ignorePatterns": ["lib","*_build", "jest.config.ts"]
 }
