--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,14 +6,14 @@
     "configurations": [
         {
             "type": "node",
-            "name": "vscode-jest-tests",
+            "name": "Run DSJS unit tests",
             "request": "launch",
             "args": [
                 /**********************************
                 /** Optional: test single file  **/
-                 "graphs",
+                //  "graphs",
                 /*********************************/
-                "--runInBand"
+                "--runInBand",
             ],
             "cwd": "${workspaceFolder}",
             "sourceMaps": true,
