--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "eslint": "eslint",
-    "test:debug": "node --inspect node_modules/jest/bin/jest --runInBand",
-    "dev:watch": "tsc --project ./tsconfig.test.json",
+    "test": "jest",
     "build": "tsc",
     "clean": "rm -rf ./test_build/*"
   },
@@ -19,11 +18,13 @@
   "devDependencies": {
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.11",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
+    "@typescript-eslint/eslint-plugin": "^4",
+    "@typescript-eslint/parser": "^4",
     "eslint": "^7.2.0",
-    "jest": "^26.0.1",
-    "typescript": "^3.9.5"
+    "jest": "^29",
+    "ts-jest": "^29",
+    "ts-node": "^10.9.1",
+    "typescript": "^4"
   },
   "dependencies": {}
 }
